RFC9110 Content-Range handling

RFC9110 added a requirement on HTTP clients to handle short ranges, i.e. response ranges shorter than the request range. Previously this was only required for multipart ranges (which VLC never used and probably never will use).

vlc_http_file_get_size needs update, possibly other places.